--- a/Product Landing Page 2.0/styles.scss
+++ b/Product Landing Page 2.0/styles.scss
@@ -6,12 +6,29 @@ html
 
 body
 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Didact Gothic', sans-serif;
     font-weight: bolder;
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     overflow-x:  hidden;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+::-webkit-scrollbar-track {
+background: hsl(277, 100%, 93%); 
+}
+
+::-webkit-scrollbar-thumb {
+background: hsl(277, 38%, 16%); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: hsl(289, 100%, 10%); 
+transition: all 0.4s ease-in-out;
 }
 
 #nav-bar
@@ -20,15 +37,17 @@ body
     top: 0;
     left: 0;
     z-index: 2;
-    opacity: 0.7;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: hsl(277, 38%, 16%);
+    background-color: hsla(295, 35%, 30%, 0.24);
+    backdrop-filter: blur(10px);
     color: white;
 }
+
+
 
 #icons
 {
@@ -46,8 +65,8 @@ i
 #signout
 {
     background-color: white;
-    color: hsl(277, 38%, 16%);
-    border-radius: 15px;
+    color: hsla(277, 38%, 16%, 0.5);
+    border-radius: 10px;
     padding: 0.8em;
     padding-left: 2em;
     padding-right: 2em;
@@ -79,7 +98,7 @@ i:hover, #signout:hover
     
 }
 
-.fa-bars
+#nav-compinfo i
 {
     display: none;
 }
@@ -122,9 +141,10 @@ i:hover, #signout:hover
 
 #card
 {
-    background: hsl(277, 100%, 93%);
+    background: linear-gradient(135deg, hsl(290, 100%, 92%) 0%, hsl(288, 100%, 82%) 49.21%, rgb(252, 228, 250) 100%);
     color: hsl(277, 38%, 16%);
     display: flex;
+    height: 100vh;
     flex-direction: row;
     position: relative;
 }
@@ -289,7 +309,7 @@ div#comp-stats div h2
 {
     display: flex;
     flex-direction: column;
-    height: 210px;
+    height: 240px;
     width: 10%;
     background:white;
     border-radius: 20px;
@@ -319,6 +339,43 @@ div#comp-stats div h2
 {
     color: gray;
     padding-right: 10px;
+}
+
+h3
+{
+    margin-bottom: 0;
+}
+.cart-box
+{
+    position: relative;
+    top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.cart-add
+{
+    width: 70%;
+    background-color: hsl(277, 100%, 93%);
+    color: hsl(277, 38%, 16%);
+    padding: 0.9em;
+    border: none;
+    font-size: 10px;
+    text-decoration: none;
+}
+
+.cart-qty
+{
+    background-color: rgba(233, 233, 233, 0.7);
+    outline: none;
+    border: none;
+    font-size: 10px;
+    width: 70%;
+    height: 30px;
 }
 
 #prod1
@@ -418,7 +475,7 @@ div#comp-stats div h2
 
 #tutorials
 {
-    background-color: hsl(277, 38%, 16%);
+    background: linear-gradient(135deg, hsl(290, 100%, 92%) 0%, hsl(288, 100%, 82%) 49.21%, rgb(252, 228, 250) 100%);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -440,14 +497,16 @@ div#comp-stats div h2
 
 #tuttext
 {
-    color: white;
+    color: hsl(289, 100%, 10%);
     text-align: left;
+    position: relative;
+    left: 1em;
 }
 
 footer
 {
     height: 200px;
-    background-color: hsl(277, 100%, 93%);
+    background: linear-gradient(135deg, hsl(290, 100%, 92%) 0%, hsl(288, 100%, 82%) 49.21%, rgb(252, 228, 250) 100%);
     color: hsl(277, 38%, 16%);
     display: flex;
     flex-direction: row;
@@ -498,7 +557,7 @@ footer
 {
     #card
     {
-        background: hsl(277, 100%, 93%);
+        background: linear-gradient(135deg, hsl(290, 100%, 92%) 0%, hsl(288, 100%, 82%) 49.21%, rgb(252, 228, 250) 100%);
         color: hsl(277, 38%, 16%);
         display: flex;
         width: 100%;
@@ -652,15 +711,29 @@ footer
     {
         margin-top: 0;
         top: 0;
-        flex-direction: column;
-        flex-wrap: nowrap;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 1fr 1fr;
+        justify-content: unset;
+        align-items: center;
+
+
     }
 
 
     .sales-item
     {
         padding: 6em;
-        margin: 3em;
+        margin: 1em;
+        width: 60px;
+        transform: scale(0.6);
+        justify-self: center;
+    }
+
+    .sales-item:hover
+    {
+        transform: scale(0.7);
     }
 
     #tutorials
@@ -679,6 +752,7 @@ footer
     {
         text-align: center;
         font-size: 18px;
+        left: 0;
     }
 
 
@@ -691,6 +765,7 @@ footer
     .item-desc
     {
         font-size: 14px;
+        width: 50px;
     }
     .item-desc h3
     {
@@ -746,6 +821,7 @@ footer
         position: relative;
         top: 0;
         justify-content: center;
+        width: 200%;
     }
 
     #more a
