--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -297,7 +297,7 @@ body {
 }
 
 .skill-tile:hover .bg-text {
-  opacity: 0.5;
+  opacity: 0.8;
   -webkit-transition: 0.8s;
   transition: 0.8s;
 }
@@ -1325,7 +1325,8 @@ video::-webkit-media-controls {
   width: 100%;
   height: 100vh;
   padding-bottom: 2em;
-  background: #bebebe;
+  background-image: url(images/whitebanner2.jpg);
+  background-size: cover;
 }
 
 #contact-card {
@@ -1364,17 +1365,13 @@ video::-webkit-media-controls {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 60%;
-}
-
-.profile-link {
-  display: none;
+  width: 70%;
 }
 
 footer {
