--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -260,7 +260,7 @@ body
 .skill-tile:hover .bg-text
 {
     
-    opacity: 0.5;
+    opacity: 0.8;
     transition: 0.8s;
 }
 
@@ -1134,7 +1134,8 @@ video::-webkit-media-controls
     width: 100%;
     height: 100vh;
     padding-bottom: 2em;
-    background: $light;
+    background-image: url(images/whitebanner2.jpg);
+    background-size: cover;
 }
 
 #contact-card
@@ -1164,14 +1165,11 @@ video::-webkit-media-controls
 #contact-icons
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 60%;
+    width: 70%;
 }
-.profile-link
-{
-    display: none;
-}
+
 footer
 {
     background: $lighter;
