--- a/Hack4Earth/styles.css
+++ b/Hack4Earth/styles.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -364,7 +364,7 @@ section {
 
 #info-text span {
   font-size: 2.1rem;
-  font-weight: 600;
+  font-weight: 400;
   padding-top: 2rem;
   color: white;
 }
