--- a/Hack4Earth/styles.scss
+++ b/Hack4Earth/styles.scss
@@ -40,7 +40,7 @@ html
 }
 body
 {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 a
 {
@@ -308,7 +308,7 @@ section
 #info-text span
 {
     font-size: 2.1rem;
-    font-weight: 600;
+    font-weight: 400;
     padding-top: 2rem;
     color: white;
 }
